Fix header jumping

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -90,7 +90,6 @@
 
 .activeLink {
   text-decoration: underline;
-  font-size: 20px;
 
   &:hover {
     text-decoration: underline;
